--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
+Deprecated==1.2.13
 dnspython==2.1.0
 email-validator==1.1.3
 fastapi==0.70.0
@@ -18,13 +19,15 @@ pydantic==1.8.2
 python-dotenv==0.19.2
 python-multipart==0.0.5
 PyYAML==5.4.1
+redis==4.0.2
 requests==2.26.0
 six==1.16.0
 sniffio==1.2.0
 starlette==0.16.0
-typing_extensions==4.0.1
+typing-extensions==4.0.1
 ujson==4.3.0
 urllib3==1.26.7
 uvicorn==0.15.0
 watchgod==0.7
 websockets==10.1
+wrapt==1.13.3
