--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 anyio==3.4.0
 asgiref==3.4.1
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
+cryptography==36.0.0
 Deprecated==1.2.13
 dnspython==2.1.0
 email-validator==1.1.3
@@ -15,6 +17,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 orjson==3.6.5
+pycparser==2.21
 pydantic==1.8.2
 python-dotenv==0.19.2
 python-multipart==0.0.5
